<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="movie">Movie</string>
    <string name="tvshow">TvShow</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="overview">Overview</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite Tv Show</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="tv_show_detail">Tv Show Detail</string>
    <string name="tv_show">Tv Show</string>
</resources>
